# AoCpp

./: .gitignore  README.md
A2017/: CMakeLists.txt  README.md  conanfile.txt
A2017/src/: aocpp.cpp  aocpp.h  day01.cpp  day01.h  day01.hpp  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h  day06.cpp  day06.h  day07.cpp  day07.h  day08.cpp  day08.h  main.cpp
A2017/tests/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp
